@@ -1,8 +1,8 @@
-/* $Id: upnpevents.c,v 1.41 2019/02/10 11:57:18 nanard Exp $ */
+/* $Id: upnpevents.c,v 1.42 2019/04/09 20:04:34 nanard Exp $ */
 /* vim: tabstop=4 shiftwidth=4 noexpandtab
  * MiniUPnP project
  * http://miniupnp.free.fr/ or http://miniupnp.tuxfamily.org/
- * (c) 2008-2018 Thomas Bernard
+ * (c) 2008-2019 Thomas Bernard
  * This software is subject to the conditions detailed
  * in the LICENCE file provided within the distribution */
 
@@ -341,7 +341,7 @@ upnp_event_notify_connect(struct upnp_event_notify * obj)
 		i = 1;
 		p++;
 		port = (unsigned short)atoi(p);
-		while(*p != '/') {
+		while(*p != '\0' && *p != '/') {
 			if(i<7) obj->portstr[i++] = *p;
 			p++;
 		}
@@ -454,7 +454,8 @@ static void upnp_event_prepare(struct upnp_event_notify * obj)
 			return;
 		}
 		obj->tosend = snprintf(obj->buffer, obj->buffersize, notifymsg,
-		                       obj->path, obj->addrstr, obj->portstr, l+2,
+		                       (obj->path[0] != '\0') ? obj->path : "/",
+		                       obj->addrstr, obj->portstr, l+2,
 		                       obj->sub->uuid, obj->sub->seq,
 		                       l, xml);
 		if (obj->tosend < 0) {
